--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "node-mysql",
   "version": "1.0.0",
   "description": "A test about using node with MySQL",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arias-spu/node-mysql.git"
   },
+  "dependencies":{
+	  
+  },
   "author": "Carlos Arias",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/arias-spu/node-mysql/issues"
-  },
   "homepage": "https://github.com/arias-spu/node-mysql#readme"
 }
