--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "type": "git",
     "url": "git+https://github.com/arias-spu/node-mysql.git"
   },
-  "dependencies":{
-	  
+  "dependencies": {
+    "mysql": "^2.17.1"
   },
   "author": "Carlos Arias",
   "license": "ISC",
